src/snapshots/cubicle__cli__tests__usage_new.snap
---
source: src/cli.rs
expression: err
---
cub-new 
Create a new environment

USAGE:
    cub new [OPTIONS] <NAME>

ARGS:
    <NAME>
            New environment name

OPTIONS:
        --enter
            Run a shell in new environment

    -h, --help
            Print help information. Use --help for more details

        --packages <PACKAGES>
            Comma-separated names of packages to inject into home directory.
            
            If omitted, uses the "default" package.
            
            Wildcards are allowed: `?` matches a single character and `*` matches zero or more
            characters.

