src/snapshots/cubicle__cli__tests__usage_package list.snap
---
source: src/cli.rs
expression: err
---
cub-package-list 
Show available packages

USAGE:
    cub package list [OPTIONS]

OPTIONS:
        --format <FORMAT>    Set output format [default: default] [possible values: default, json,
                             names]
    -h, --help               Print help information. Use --help for more details

