src/snapshots/cubicle__cli__tests__usage_purge.snap
---
source: src/cli.rs
expression: err
---
cub-purge 
Delete environment(s) and their work directories

USAGE:
    cub purge <NAMES>...

ARGS:
    <NAMES>...    Environment name(s)

OPTIONS:
    -h, --help    Print help information. Use --help for more details

