src/snapshots/cubicle__cli__tests__usage_tmp.snap
---
source: src/cli.rs
expression: err
---
cub-tmp 
Create and enter a new temporary environment

USAGE:
    cub tmp [OPTIONS]

OPTIONS:
    -h, --help
            Print help information. Use --help for more details

        --packages <PACKAGES>
            Comma-separated names of packages to inject into home directory.
            
            If omitted, uses the "default" package.
            
            Wildcards are allowed: `?` matches a single character and `*` matches zero or more
            characters.

